<resources>
    <string name="app_name">charity</string>
    <string name="please_wait">Please wait</string>
    <string name="e_mail">E-mail</string>
    <string name="sign_up"><u>Sign up</u></string>
    <string name="goto_login"><u>Login</u></string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="forget_password">Forget Password?</string>
    <string name="don_t_you_have_an_account">Don\'t you have an account?</string>
    <string name="signup_">Sign up</string>
    <string name="discover_and_join_community_event">Discover and Join Community Event</string>
    <string name="join_hands_and_be_a_part_of_something_meaningful">Join hands and be a part of something meaningful</string>
    <string name="search_for_event">search for event</string>
    <string name="add_event">Add Event</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="add_event_">Add Event</string>
    <string name="select_cover_photo">Select cover photo</string>
    <string name="event_name">Event Name</string>
</resources>