<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="18dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="350dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:src="@drawable/logo"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableStart="@drawable/baseline_email_24"
            android:drawablePadding="10dp"
            android:paddingStart="10dp"
            android:id="@+id/maiAdd"
            android:paddingEnd="10dp"
            android:hint="@string/e_mail"
            android:inputType="textPersonName"
            android:textSize="13sp"
            android:background="@drawable/custom_edit_text"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableStart="@drawable/baseline_person_24"
            android:drawablePadding="10dp"
            android:paddingStart="10dp"
            android:id="@+id/fullName"
            android:paddingEnd="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:textSize="13sp"
            android:background="@drawable/custom_edit_text"/>

        <EditText
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:id="@+id/password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="13sp"
            android:background="@drawable/custom_edit_text"/>
        <EditText
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:id="@+id/confirmPass"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textSize="13sp"
            android:background="@drawable/custom_edit_text"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="40dp"
            android:id="@+id/signUpBtn"
            android:backgroundTint="@color/green"
            android:text="@string/signup_"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"/>
            <TextView
                android:id="@+id/gotoLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goto_login"
                android:layout_marginStart="5dp"
                android:textColor="@color/darkgreen"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>