<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:padding="18dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_location_pin_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Kandy, Sri Lanka"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginStart="7dp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/discover_and_join_community_event"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginStart="7dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/join_hands_and_be_a_part_of_something_meaningful"
            android:textSize="16sp"
            android:textColor="@color/green"
            android:layout_marginTop="10dp"
            android:layout_marginStart="7dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:hint="@string/search_for_event"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_gravity="start|center"
            android:textSize="13sp"
            android:drawableEnd="@drawable/baseline_search_24"
            android:background="@drawable/custom_search" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upcoming_events"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/addEvent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_event"
            android:gravity="end|center"
            android:textColor="@color/black"
            android:drawablePadding="5dp"
            android:layout_weight="1"
            app:drawableEndCompat="@drawable/baseline_add_24" />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="30dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:id="@+id/eventRec"
        tools:listitem="@layout/event_adapter_view"/>
</LinearLayout>