<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="18dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_event_"
                android:drawablePadding="3dp"
                android:gravity="start|center"
                android:textSize="16sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/baseline_arrow_back_24" />
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/dashed_rectangle">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"/>
                <LinearLayout
                    android:id="@+id/selectImageLay"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/select_cover_photo"
                        app:drawableTint="#A0A0A0"
                        app:drawableTopCompat="@drawable/outline_image_24" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Upload"
                        android:layout_marginTop="7dp"
                        app:drawableTint="#A0A0A0"
                        android:gravity="center|start"
                        android:drawablePadding="5dp"
                        app:drawableEndCompat="@drawable/outline_file_upload_24" />
                </LinearLayout>
            </FrameLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/name"
                    android:inputType="textPersonName"
                    android:layout_marginTop="20dp"
                    android:drawablePadding="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:hint="@string/event_name"
                    android:textSize="13sp"
                    android:background="@drawable/custom_edit_text"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/start"
                    android:layout_marginTop="10dp"
                    android:drawablePadding="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:hint="Start Date"
                    android:inputType="textPersonName"
                    android:textSize="13sp"
                    android:background="@drawable/custom_edit_text"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/end"
                    android:layout_marginTop="10dp"
                    android:drawablePadding="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:hint="End Date"
                    android:inputType="textPersonName"
                    android:textSize="13sp"
                    android:background="@drawable/custom_edit_text"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/location"
                    android:layout_marginTop="10dp"
                    android:drawablePadding="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:hint="Location"
                    android:inputType="textPersonName"
                    android:textSize="13sp"
                    android:background="@drawable/custom_edit_text"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:id="@+id/about"
                    android:layout_marginTop="10dp"
                    android:drawablePadding="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:gravity="start"
                    android:paddingTop="20dp"
                    android:hint="About"
                    android:inputType="textImeMultiLine"
                    android:textSize="13sp"
                    android:background="@drawable/custom_edit_text"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:layout_marginTop="40dp"
                    android:id="@+id/createEvent"
                    android:backgroundTint="@color/green"
                    android:text="Create Event"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>